agent9527-rs/tui/src/chatwidget/snapshots/agent9527_tui__chatwidget__tests__esc_interrupt_goal_paused_footer.snap
---
source: tui/src/chatwidget/tests/status_and_layout.rs
expression: snapshot
---
"                                                                                "
"• Working (0s • esc to interrupt)                                               "
"                                                                                "
"                                                                                "
"› Ask Agent9527 to do anything                                                  "
"                                                                                "
"  gpt-5.6-sol default · /tmp/project                Goal paused (/goal resume)  "
