agent9527-rs/tui/src/chatwidget/snapshots/agent9527_tui__chatwidget__tests__feedback_good_result_consent_popup.snap
---
source: tui/src/chatwidget/tests/popups_and_settings.rs
expression: popup
---
  Upload logs?

  The following files will be sent:
    • agent9527-logs.log
    • agent9527-doctor-report.json
    • agent9527-apps-tools-cache.json (if available)
    • agent9527-app-directory-cache.json (if available)
    • auto-review-rollout-thread-1.jsonl
    • agent9527-connectivity-diagnostics.txt

› 1. Yes  Share the current Agent9527 session logs and diagnostics with the
          team for troubleshooting.
  2. No

  Press enter to confirm or esc to go back
