agent9527-rs/tui/src/chatwidget/snapshots/agent9527_tui__chatwidget__tests__guardian_approved_exec_renders_approved_request.snap
---
source: tui/src/chatwidget/tests/guardian.rs
expression: normalize_snapshot_paths(term.backend().vt100().screen().contents())
---





✔ Auto-reviewer approved agent9527 to run rm -f /tmp/guardian-approved.sqlite
  this time


› Ask Agent9527 to do anything

  gpt-5.6-sol default · /tmp/project
